Modificacoes semana 3. Affixes and spy menu

--- a/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/css/mystyles.css
+++ b/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/css/mystyles.css
@@ -64,8 +64,12 @@ body {
 }
 
 .tab-content {
-	border-left: 1px solid #ddd;
-	border-right: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
-	padding: 10px;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+
+.affix {
+    top:100px;
 }
