--- a/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/css/mystyles.css
+++ b/Full Stack Development Coursera Course/Front-End Web UI Frameworks and Tools/css/mystyles.css
@@ -73,3 +73,23 @@ body {
 .affix {
     top:100px;
 }
+
+.carousel {
+	background: #1A237E;
+}
+.carousel .item {
+	height: 300px;
+}
+
+.item img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-height: 300px;
+}
+
+#carouselButtons {
+	right: 0px;
+	position: absolute;
+	bottom: 0px;
+}
